aregamos sass y SEO

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon/favicon.png.png" type="image/x-icon">
-    <title>Julietta-beauty</title>
+    <title>Julietta-beauty - Productos</title>
+    <meta name="description" content="Todo lo que necesites para tu cuidado personal encontralo haciendo clic aquí">
+    <meta name="author" content="Julieta Ayelén Maffioni">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body class="bg-pattern">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
@@ -35,7 +37,7 @@
             <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
           </li>
         </ul>
-        <button class="btn btn-violet" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-cart2" viewBox="0 0 16 16">
+        <button class="btn" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-cart2" viewBox="0 0 16 16">
           <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
          </svg>
         </button>
@@ -45,6 +47,7 @@
         <h1>
             Productos
         </h1>
+        <br>
         <h2>
             Categorias
         </h2>
@@ -54,176 +57,194 @@
       <h2 class="text-center">
          Cosmetica
       </h2>
-      <div class="row">
-       <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-         <div class="card ms-2">
-           <img src="../img/Productos/cosmetica/acne.png" class="card-img-top w-100" alt="Acnex Depure Control Topic">
-           <div class="card-body">
+   <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+     <div class="card">
+       <img src="../img/Productos/cosmetica/acne.png" class="card-img-top w-100" alt="Acnex Depure Control Topic">
+         <div class="card-body">
              <h3 class="card-title">Acnex Depure Control Topic</h3>
-             <p class="card-text">$2000</p>
+             <p class="card-text text-center">$3100</p>
              <a href="#" class="btn btn-violet w-100">Comprar</a>
          </div>
-       </article>
-       <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+    </div>
+   </div>
+   <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+     <div class="card">
+       <img src="../img/Productos/cosmetica/cremaf.png" class="card-img-top w-100" alt="Silver Age Night Cream">
+         <div class="card-body">
+           <h3 class="card-title">Silver Age Night Cream</h3>
+           <p class="card-text text-center">$5545</p>
+           <a href="#" class="btn btn-violet w-100">Comprar</a> 
+     </div>
+   </div>
+       </div>
+       <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
          <div class="card">
-             <img src="../img/Productos/cosmetica/cremaf.png" class="card-img-top w-100" alt="Silver Age Night Cream">
-             <div class="card-body">
-               <h3 class="card-title">Silver Age Night Cream</h3>
-               <p class="card-text">$20000</p>
-               <a href="#" class="btn btn-violet w-100">Comprar</a> 
-         </div>
-       </article>
-       <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-         <div class="card ms-2">
            <img src="../img/Productos/cosmetica/mascara.png" class="card-img-top w-100" alt="Skinbioma Face Mask">
            <div class="card-body">
              <h3 class="card-title">Skinbioma Face Mask</h3>
-             <p class="card-text">$7000</p>
-             <a href="#" class="btn btn-violet w-100">Comprar</a> 
+               <p class="card-text text-center">$1020</p>
+               <a href="#" class="btn btn-violet w-100">Comprar</a> 
+           </div>
          </div>
-       </article>
-       <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-        <div class="card ms-2">
+       </div>
+       <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+        <div class="card">
           <img src="../img/Productos/cosmetica/serum.png" class="card-img-top w-100" alt="Biosmotic Water Drop">
           <div class="card-body">
             <h3 class="card-title">Biosmotic Water Drop</h3>
-            <p class="card-text">$7000</p>
-            <a href="#" class="btn btn-violet w-100">Comprar</a> 
+              <p class="card-text text-center">$6025</p>
+              <a href="#" class="btn btn-violet w-100">Comprar</a> 
+          </div>
         </div>
-      </article>
       </div>
-  </section>
+     </div>
+ </section>
   <!-- ends cards productos cosmet -->
   <section class="conteiner-fluid py-2">
     <h2 class="text-center">
        Cabello
     </h2>
-    <div class="row">
-     <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-       <div class="card ms-2">
-         <img src="../img/Productos/cabello/mascarillapelo.png" class="card-img-top w-100" alt="Mascarilla Garnier Fructis Hair Food Sandía 3 En 1">
-         <div class="card-body">
-           <h3 class="card-title">Mascarilla Garnier Fructis Hair Food Sandía 3 En 1</h3>
-           <p class="card-text">$2000</p>
+ <div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+   <div class="card">
+     <img src="../img/Productos/cabello/mascarillapelo.png" class="card-img-top w-100" alt="Mascarilla Garnier Fructis Hair Food Sandía 3 En 1">
+       <div class="card-body">
+           <h3 class="card-title">Garnier Fructis Hair Food</h3>
+           <p class="card-text text-center">$1600</p>
            <a href="#" class="btn btn-violet w-100">Comprar</a>
        </div>
-     </article>
-     <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+  </div>
+ </div>
+ <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+   <div class="card">
+     <img src="../img/Productos/cabello/shampoo.png" class="card-img-top w-100" alt="L'Oreal Paris EverPure Moisture">
+       <div class="card-body">
+         <h3 class="card-title">L'Oreal Paris Moisture</h3>
+         <p class="card-text text-center">$9000</p>
+         <a href="#" class="btn btn-violet w-100">Comprar</a> 
+   </div>
+ </div>
+     </div>
+     <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
        <div class="card">
-           <img src="../img/Productos/cabello/shampoo.png" class="card-img-top w-100" alt="L'Oreal Paris EverPure Moisture">
-           <div class="card-body">
-             <h3 class="card-title">L'Oreal Paris EverPure Moisture</h3>
-             <p class="card-text">$20000</p>
-             <a href="#" class="btn btn-violet w-100">Comprar</a> 
-       </div>
-     </article>
-     <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-       <div class="card ms-2">
          <img src="../img/Productos/cabello/tintura.png" class="card-img-top w-100" alt="Garnier Nutrisse Tintura">
          <div class="card-body">
            <h3 class="card-title">Garnier Nutrisse Tintura</h3>
-           <p class="card-text">$7000</p>
-           <a href="#" class="btn btn-violet w-100">Comprar</a> 
+             <p class="card-text text-center">$1100</p>
+             <a href="#" class="btn btn-violet w-100">Comprar</a> 
+         </div>
        </div>
-     </article>
-     <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-      <div class="card ms-2">
+     </div>
+     <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+      <div class="card">
         <img src="../img/Productos/cabello/keratin.png" class="card-img-top w-100" alt="Kit Keratin">
         <div class="card-body">
           <h3 class="card-title">Kit Keratin</h3>
-          <p class="card-text">$7000</p>
-          <a href="#" class="btn btn-violet w-100">Comprar</a> 
+            <p class="card-text text-center">$7000</p>
+            <a href="#" class="btn btn-violet w-100">Comprar</a> 
+        </div>
       </div>
-    </article>
     </div>
+   </div>
 </section>
+<!-- ends cabello -->
 <section class="conteiner-fluid py-2">
   <h2 class="text-center">
     Herramientas
   </h2>
-  <div class="row">
-   <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-     <div class="card ms-2">
-       <img src="../img/Productos/herramientas/pincel.png" class="card-img-top w-100" alt="Pincel Mímika Powder">
-       <div class="card-body">
+<div class="row row-cols-1 row-cols-md-2 g-4">
+<div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+ <div class="card">
+   <img src="../img/Productos/herramientas/pincel.png" class="card-img-top w-100" alt="Pincel Mímika Powder">
+     <div class="card-body">
          <h3 class="card-title">Pincel Mímika Powder</h3>
-         <p class="card-text">$2000</p>
+         <p class="card-text text-center">$5800</p>
          <a href="#" class="btn btn-violet w-100">Comprar</a>
      </div>
-   </article>
-   <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+</div>
+</div>
+<div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+ <div class="card">
+   <img src="../img/Productos/herramientas/plancha.png" class="card-img-top w-100" alt="Plancha babyliss">
+     <div class="card-body">
+       <h3 class="card-title">Plancha babyliss</h3>
+       <p class="card-text text-center">$28500</p>
+       <a href="#" class="btn btn-violet w-100">Comprar</a> 
+ </div>
+</div>
+   </div>
+   <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
      <div class="card">
-         <img src="../img/Productos/herramientas/plancha.png" class="card-img-top w-100" alt="Plancha babyliss">
-         <div class="card-body">
-           <h3 class="card-title">Plancha babyliss</h3>
-           <p class="card-text">$20000</p>
-           <a href="#" class="btn btn-violet w-100">Comprar</a> 
-     </div>
-   </article>
-   <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-     <div class="card ms-2">
        <img src="../img/Productos/herramientas/secadordepelo.png" class="card-img-top w-100" alt="Secador de pelo">
        <div class="card-body">
          <h3 class="card-title">Secador de pelo</h3>
-         <p class="card-text">$7000</p>
-         <a href="#" class="btn btn-violet w-100">Comprar</a> 
+           <p class="card-text text-center">$47800</p>
+           <a href="#" class="btn btn-violet w-100">Comprar</a> 
+       </div>
      </div>
-   </article>
-   <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-    <div class="card ms-2">
+   </div>
+   <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+    <div class="card">
       <img src="../img/Productos/herramientas/broches.png" class="card-img-top w-100" alt="Broches">
       <div class="card-body">
         <h3 class="card-title">Broches</h3>
-        <p class="card-text">$7000</p>
-        <a href="#" class="btn btn-violet w-100">Comprar</a> 
+          <p class="card-text text-center">$2000</p>
+          <a href="#" class="btn btn-violet w-100">Comprar</a> 
+      </div>
     </div>
-  </article>
   </div>
+ </div>
 </section>
+<!-- ends herramientas -->
 <section class="conteiner-fluid py-2">
   <h2 class="text-center">
-     Combos
+    Combos
   </h2>
-  <div class="row">
-   <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-     <div class="card ms-2">
-       <img src="../img/Productos/combos/kitpies.png" class="card-img-top w-100" alt="Kit para pies">
-       <div class="card-body">
-         <h3 class="card-title">Kit para Pies</h3>
-         <p class="card-text">$2000</p>
+<div class="row row-cols-1 row-cols-md-2 g-4">
+<div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+ <div class="card">
+   <img src="../img/Productos/combos/kitpies.png" class="card-img-top w-100" alt="Kit para pies">
+     <div class="card-body">
+         <h3 class="card-title">Kit para pies</h3>
+         <p class="card-text text-center">$3000</p>
          <a href="#" class="btn btn-violet w-100">Comprar</a>
      </div>
-   </article>
-   <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+</div>
+</div>
+<div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+ <div class="card">
+   <img src="../img/Productos/combos/secadoryplancha.png" class="card-img-top w-100" alt="Secador y plancha">
+     <div class="card-body">
+       <h3 class="card-title">Secador y plancha</h3>
+       <p class="card-text text-center">$42800</p>
+       <a href="#" class="btn btn-violet w-100">Comprar</a> 
+ </div>
+</div>
+   </div>
+   <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
      <div class="card">
-         <img src="../img/Productos/combos/secadoryplancha.png" class="card-img-top w-100" alt="Secador y plancha">
-         <div class="card-body">
-           <h3 class="card-title">Secador de pelo y Plancha</h3>
-           <p class="card-text">$20000</p>
-           <a href="#" class="btn btn-violet w-100">Comprar</a> 
-     </div>
-   </article>
-   <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-     <div class="card ms-2">
        <img src="../img/Productos/combos/peines.png" class="card-img-top w-100" alt="Kit peines">
        <div class="card-body">
-         <h3 class="card-title">Kit de peines</h3>
-         <p class="card-text">$7000</p>
-         <a href="#" class="btn btn-violet w-100">Comprar</a> 
+         <h3 class="card-title">Kit peines</h3>
+           <p class="card-text text-center">$4500</p>
+           <a href="#" class="btn btn-violet w-100">Comprar</a> 
+       </div>
      </div>
-   </article>
-   <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
-    <div class="card ms-2">
+   </div>
+   <div class="col-sm-12 col-md-6 col-lg-3 mb-2">
+    <div class="card">
       <img src="../img/Productos/combos/keratin.png" class="card-img-top w-100" alt="Kit keratina">
       <div class="card-body">
-        <h3 class="card-title">Kit Keratin</h3>
-        <p class="card-text">$7000</p>
-        <a href="#" class="btn btn-violet w-100">Comprar</a> 
+        <h3 class="card-title">Kit keratina</h3>
+          <p class="card-text text-center">$7000</p>
+          <a href="#" class="btn btn-violet w-100">Comprar</a> 
+      </div>
     </div>
-  </article>
   </div>
+ </div>
 </section>
-
+<!-- ends combos -->
 <footer>
   <div class="row cardfooter">
    <div class="col-sm-6 mb-3 mb-sm-0">
@@ -236,7 +257,7 @@
            </svg>
             Metodos de pago
          </h4>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text">Ofrecemos diversas opciones de pago para su comodidad, incluyendo tarjetas de crédito, transferencias bancarias y pagos en efectivo. Contáctenos para obtener más información sobre nuestros métodos de pago y estaremos encantados de asistirle.</p>
        </div>
      </div>
    </div>
