--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./favicon/favicon.png.png" type="image/x-icon"> 
     <title>Julietta-beauty</title>
+    <meta name="description" content="Conseguí las mejores ofertas en productos y servicios de belleza">
+    <meta name="author" content="Julieta Ayelén Maffioni">
+    <meta name="robot" content="index,follow">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body id="contenedor-grid" class="bg-pattern">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
@@ -34,7 +37,7 @@
             <a class="nav-link active" aria-current="page" href="pages/contacto.html">Contacto</a>
           </li>
         </ul>
-        <button class="btn btn-violet" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-cart2" viewBox="0 0 16 16">
+        <button class="btn" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-cart2" viewBox="0 0 16 16">
           <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
         </svg></button>
       </div>
@@ -58,7 +61,7 @@
           <img src="img/Productos/dosporuno.png" class="d-block w-100" alt="Dos por uno">
         </div>
         <div class="carousel-item">
-          <img src="img/Productos/makeupsale.png" class="d-block w-100" alt="maakeup sale">
+          <img src="img/Productos/makeupsale.png" class="d-block w-100" alt="makeup sale">
         </div>
         <div class="carousel-item">
           <img src="img/Productos/off.png" class="d-block w-100" alt="20% off">
@@ -83,8 +86,8 @@
         <div class="card">
           <img src="img/Productos/combos/kitpies.png" class="card-img-top w-100" alt="Kit para pedicuria">
             <div class="card-body">
-                <h3 class="card-title">Producto 1</h3>
-                <p class="card-text">$2000</p>
+                <h3 class="card-title">Kit para pies</h3>
+                <p class="card-text">$3000</p>
                 <a href="#" class="btn btn-violet w-100">Comprar</a>
             </div>
        </div>
@@ -93,7 +96,7 @@
         <div class="card">
           <img src="img/Productos/combos/keratin.png" class="card-img-top w-100" alt="Combo keratina">
             <div class="card-body">
-              <h3 class="card-title">Producto 3</h3>
+              <h3 class="card-title">Kit Keratin</h3>
               <p class="card-text">$7000</p>
               <a href="#" class="btn btn-violet w-100">Comprar</a> 
         </div>
@@ -103,8 +106,8 @@
             <div class="card">
               <img src="img/Productos/combos/secadoryplancha.png" class="card-img-top w-100" alt="Secador y plancha de pelo">
               <div class="card-body">
-                <h3 class="card-title">Producto 2</h3>
-                  <p class="card-text">$20000</p>
+                <h3 class="card-title">Secador y plancha</h3>
+                  <p class="card-text">$42800</p>
                   <a href="#" class="btn btn-violet w-100">Comprar</a> 
               </div>
             </div>
@@ -125,7 +128,7 @@
           </svg>
            Metodos de pago
         </h4>
-         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+         <p class="card-text">Ofrecemos diversas opciones de pago para su comodidad, incluyendo tarjetas de crédito, transferencias bancarias y pagos en efectivo. Contáctenos para obtener más información sobre nuestros métodos de pago y estaremos encantados de asistirle.</p>
       </div>
     </div>
   </div>
