--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon/favicon.png.png" type="image/x-icon"> 
-    <title>Julietta-beauty</title>
+    <title>Julietta-beauty - Contactanos</title>
+    <meta name="description" content="Estamos para ayudarte con cualquier duda, envianos un mensaje.">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body class="bg-pattern">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
@@ -34,7 +36,7 @@
             <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
           </li>
         </ul>
-        <button class="btn btn-violet" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-cart2" viewBox="0 0 16 16">
+        <button class="btn" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-cart2" viewBox="0 0 16 16">
           <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
          </svg>
         </button>
@@ -45,7 +47,7 @@
       <h1>
         Contactanos
       </h1>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem, aliquam blanditiis! Iste itaque distinctio adipisci corporis perspiciatis commodi beatae fuga nisi, molestias assumenda? Natus rerum sed veritatis similique illum repudiandae.</p>
+      <p>Para poder ponernos en contacto por favor, proporcione sus datos de contacto a continuación y nos pondremos en comunicación con usted a la brevedad. Además, quedamos a su disposición para cualquier consulta o inquietud que deseen compartir. Muchas gracias.</p>
 <form>
   <div class="col-lg-6 col-md-12 col-sm-12">
   <div class="mb-3">
@@ -67,6 +69,7 @@
   <button type="submit" class="btn btn-primary">Enviar</button>
 </div>
 </form>
+</section>
     <section class="contenedor col-lg-6 col-md-12 col-sm-12">
      <h2>Donde encontrarnos</h2>
      <div class="centerimg">
@@ -77,7 +80,7 @@
      </div>
     </div>
     </section>
-    <section class="contenedor">
+    <section class="contenedor contenedor-fondo">
       <h2>Nuestras redes</h2>
        <a href="http://www.facebook.com/" target="_blank">
         <img src="../img/icon/icofacebook.png" alt="facebook">
@@ -101,7 +104,7 @@
            </svg>
             Metodos de pago
          </h4>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text">Ofrecemos diversas opciones de pago para su comodidad, incluyendo tarjetas de crédito, transferencias bancarias y pagos en efectivo. Contáctenos para obtener más información sobre nuestros métodos de pago y estaremos encantados de asistirle.</p>
        </div>
      </div>
    </div>
