--- a/pages/nuestrosservicios.html
+++ b/pages/nuestrosservicios.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon/favicon.png.png" type="image/x-icon"> 
-    <title>Julietta-beauty</title>
+    <title>Julietta-beauty - Nuestros Servicios</title>
+    <meta name="description" content="Exterioriza tu interior con nuestros tratamientos.">
+    <meta name="author" content="Julieta Ayelén Maffioni">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body class="bg-pattern">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
@@ -34,7 +36,7 @@
             <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
           </li>
         </ul>
-        <button class="btn btn-violet" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-cart2" viewBox="0 0 16 16">
+        <button class="btn" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-cart2" viewBox="0 0 16 16">
           <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
          </svg>
         </button>
@@ -46,38 +48,46 @@
         </h1>
         <div class="card mb-3 bordes">
           <div class="centerimg">
-          <img src="../img/servicios/manicuria.png" class="card-img-top w-50" alt="Manicuria y Pedicuria">
+          <img src="../img/servicios/manicuria.png" class="card-img-top w-100" alt="Manicuria y Pedicuria">
         </div>
           <div class="card-body">
             <h2 class="card-title">Manicuria y Pedicuria</h2>
-            <p  class="card-text ptext">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam repudiandae quasi unde, iure minus error cupiditate quidem tempore rem velit soluta temporibus distinctio vel eius ullam beatae expedita labore lorem ipsum dolor sit amet consectetur adipisicing elit. Sed reprehenderit maxime error esse voluptatum aspernatur unde animi amet officia cumque temporibus praesentium, magnam pariatur a, recusandae quidem vero suscipit dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Non illum quam odit iste animi. Eaque, quos ullam error vel eligendi delectus? Et architecto fuga minima harum vitae beatae reiciendis adipisci.</p>
+            <p  class="card-text ptext">
+              Descubre la experiencia de nuestras profesionales en manicura y pedicura para lucir unas manos y pies cuidados hasta el último detalle. En nuestro centro de belleza, ofrecemos servicios de manicura y pedicura personalizados para mimar tus uñas, cutículas y piel, utilizando productos de alta calidad y técnicas profesionales. Disfruta de un momento de relajación y cuidado con nuestros servicios de manicura y pedicura, y déjanos consentirte con resultados impecables y duraderos. ¡Ven a visitarnos y descubre el placer de lucir uñas saludables y hermosas!
+            </p>
           </div>
           </div>
          <div class="card mb-3 bordes">
           <div class="centerimg">
-          <img src="../img/servicios/masajes.png" class="card-img-top w-50" alt="Masajes">
+          <img src="../img/servicios/masajes.png" class="card-img-top w-100" alt="Masajes">
         </div>
           <div class="card-body">
             <h2 class="card-title">Masajes</h2>
-            <p class="card-text ptext">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam repudiandae quasi unde, iure minus error cupiditate quidem tempore rem velit soluta temporibus distinctio vel eius ullam beatae expedita labore lorem ipsum dolor sit amet consectetur adipisicing elit. Sed reprehenderit maxime error esse voluptatum aspernatur unde animi amet officia cumque temporibus praesentium, magnam pariatur a, recusandae quidem vero suscipit dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Non illum quam odit iste animi. Eaque, quos ullam error vel eligendi delectus? Et architecto fuga minima harum vitae beatae reiciendis adipisci.</p>
+            <p class="card-text ptext">
+              Relájate y revitaliza tu cuerpo y mente con nuestros servicios de masajes profesionales. Nuestros terapeutas altamente capacitados ofrecen una amplia gama de técnicas de masaje que se adaptan a tus necesidades y preferencias individuales. Ya sea que busques relajación profunda, alivio del estrés o alivio de dolores musculares, nuestros masajes personalizados te brindarán una experiencia única de bienestar. Utilizamos aceites esenciales y técnicas terapéuticas para ayudarte a relajarte, liberar tensiones y mejorar tu bienestar general. Ven y disfruta de una experiencia de masaje única en nuestro centro de bienestar. Tu cuerpo y mente lo agradecerán.
+            </p>
           </div>
         </div>
         <div class="card mb-3 bordes">
           <div class="centerimg">
-          <img src="../img/servicios/cabello.png" class="card-img-top w-50" alt="Tratamientos capilares">
+          <img src="../img/servicios/cabello.png" class="card-img-top w-100" alt="Tratamientos capilares">
         </div>
           <div class="card-body">
             <h2 class="card-title">Tratamientos Capilares</h2>
-            <p class="card-text ptext">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam repudiandae quasi unde, iure minus error cupiditate quidem tempore rem velit soluta temporibus distinctio vel eius ullam beatae expedita labore lorem ipsum dolor sit amet consectetur adipisicing elit. Sed reprehenderit maxime error esse voluptatum aspernatur unde animi amet officia cumque temporibus praesentium, magnam pariatur a, recusandae quidem vero suscipit dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Non illum quam odit iste animi. Eaque, quos ullam error vel eligendi delectus? Et architecto fuga minima harum vitae beatae reiciendis adipisci.</amet></p>
+            <p class="card-text ptext">
+              Transforma tu cabello con nuestros exclusivos tratamientos capilares. Ya sea que desees un alisado profesional, una revitalización con keratina o cualquier otro tratamiento capilar, nuestros expertos en cuidado del cabello te brindarán un servicio personalizado para satisfacer tus necesidades. Utilizamos productos de alta calidad y técnicas especializadas para mejorar la apariencia, salud y textura de tu cabello. Nuestros tratamientos capilares están diseñados para nutrir, reparar y embellecer tu cabello, dejándolo suave, sedoso y lleno de vida. ¡Confía en nuestros profesionales y descubre la diferencia que nuestros tratamientos capilares pueden hacer por ti!
+            </p>
           </div>
         </div>
         <div class="card mb-3 bordes">
           <div class="centerimg">
-          <img src="../img/servicios/reiki.png" class="card-img-top w-50" alt="Reiki">
+          <img src="../img/servicios/reiki.png" class="card-img-top w-100" alt="Reiki">
         </div>
           <div class="card-body">
             <h2 class="card-title">Reiki</h2>
-            <p class="card-text ptext">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam repudiandae quasi unde, iure minus error cupiditate quidem tempore rem velit soluta temporibus distinctio vel eius ullam beatae expedita labore lorem ipsum dolor sit amet consectetur adipisicing elit. Sed reprehenderit maxime error esse voluptatum aspernatur unde animi amet officia cumque temporibus praesentium, magnam pariatur a, recusandae quidem vero suscipit dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Non illum quam odit iste animi. Eaque, quos ullam error vel eligendi delectus? Et architecto fuga minima harum vitae beatae reiciendis adipisci.</p>
+            <p class="card-text ptext">
+              Descubre el poder de la energía universal con nuestros servicios de Reiki. Nuestros practicantes de Reiki certificados te ofrecen una experiencia de sanación y equilibrio en un entorno tranquilo y relajante. El Reiki es una técnica de terapia energética que utiliza toques suaves o posiciones de manos sin contacto físico para ayudar a equilibrar la energía del cuerpo, aliviar el estrés, reducir la ansiedad y promover la relajación profunda. Nuestros practicantes te guiarán en un viaje de renovación y bienestar, ayudándote a equilibrar tu cuerpo, mente y espíritu. Descubre los beneficios del Reiki para tu bienestar integral y disfruta de una experiencia única de sanación en nuestras manos expertas.
+            </p>
           </div>
         </div>
       </div>
@@ -94,7 +104,7 @@
                </svg>
                 Metodos de pago
              </h4>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">Ofrecemos diversas opciones de pago para su comodidad, incluyendo tarjetas de crédito, transferencias bancarias y pagos en efectivo. Contáctenos para obtener más información sobre nuestros métodos de pago y estaremos encantados de asistirle.</p>
            </div>
          </div>
        </div>
