--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon/favicon.png.png" type="image/x-icon"> 
-    <title>Julietta-beauty</title>
+    <title>Julietta-beauty - Nosotros</title>
+    <meta name="description" content="Salón de belleza especializado en realzar tu mejor versión y cuidarte. ¡Ven a conocernos!">
+    <meta name="author" content="Julieta Ayelén Maffioni">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body class="bg-pattern">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
@@ -34,7 +36,7 @@
             <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
           </li>
         </ul>
-        <button class="btn btn-violet" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-cart2" viewBox="0 0 16 16">
+        <button class="btn" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="bi bi-cart2" viewBox="0 0 16 16">
           <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
          </svg>
         </button>
@@ -44,10 +46,20 @@
     <div class="card mb-3">
       <div class="card-body text-center">
         <h1 class="card-title">Sobre nosotros</h1>
-        <p class="card-text ptext">Queremos darte la bienvenida a nuestro centro de estética en Mar del Plata. Somos un grupo que nació en 2018, conformado por un grupo de profesionales especializados en hacerte sentir mejor con tu imagen exterior como con tu interior.¿Quieres convertirte en tu versión ideal? Entonces no esperes más.</p>
+        <p class="card-text ptext">¡Bienvenidos a Julietta Beauty!
+          <br>
+          Desde nuestro inicio en el año 2018, hemos estado comprometidos en ofrecer un oasis de bienestar y relajación para nuestros apreciados clientes. Nuestro equipo de expertos en belleza y bienestar está dedicado a proporcionar servicios de alta calidad que te ayudarán a rejuvenecer tu cuerpo y mente, y realzar tu belleza natural.
+          <br>
+          Nuestro salón cuenta con un ambiente acogedor y relajante, diseñado para que te sientas completamente cómodo y puedas disfrutar de tu experiencia de belleza y relajación al máximo. Nuestros profesionales altamente capacitados están comprometidos en brindarte un servicio excepcional, personalizado según tus necesidades y preferencias.
+          <br>
+          En Julietta Beauty, ofrecemos una amplia gama de servicios que incluyen tratamientos capilares, masajes relajantes, manicuras y pedicuras, reflexología, y mucho más. Utilizamos productos de alta calidad para garantizar resultados excepcionales y cuidar de tu cabello y cuerpo de la mejor manera posible.
+          <br>
+          Nuestro objetivo es ayudarte a sentirte renovado, rejuvenecido y revitalizado después de cada visita a nuestro salón. Queremos que te sientas especial y mimado en un ambiente tranquilo y sereno. Nos enorgullece poder brindarte un servicio de primera clase y ayudarte a cuidar de ti mismo/a en un espacio dedicado exclusivamente a tu bienestar.
+          <br>
+          ¡Te invitamos a visitarnos y experimentar un verdadero descanso para tus sentidos! Nos encantaría recibirte y ayudarte a sentirte y lucir lo mejor posible. ¡Bienvenido/a a nuestro salón de belleza y relax!</p>
       </div>
         <div class="row col-lg-6 col-md-6 col-sm-12 centerimg">
-          <img src="../img/sobrenosotros/salon.png" class="rounded mx-auto d-block" alt="...">
+          <img src="../img/sobrenosotros/salon.png" class="rounded mx-auto d-block" alt="Nuestro espacio">
     </div>
   </div>
     <div class="card">
@@ -76,7 +88,7 @@
              </svg>
               Metodos de pago
            </h4>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">Ofrecemos diversas opciones de pago para su comodidad, incluyendo tarjetas de crédito, transferencias bancarias y pagos en efectivo. Contáctenos para obtener más información sobre nuestros métodos de pago y estaremos encantados de asistirle.</p>
          </div>
        </div>
      </div>
