agregue correciones de la ultima preentrega en la pagina de contactos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,16 +49,16 @@
       </h1>
       <p>Para poder ponernos en contacto por favor, proporcione sus datos de contacto a continuación y nos pondremos en comunicación con usted a la brevedad. Además, quedamos a su disposición para cualquier consulta o inquietud que deseen compartir. Muchas gracias.</p>
 <form>
-  <div class="col-lg-6 col-md-12 col-sm-12">
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Nombre y Apellido</label>
+  <div class="row col-lg-6 col-md-12 col-sm-12">
+  <div class="mb-3 ">
+    <label for="exampleInputEmail1" class="form-label" id="exampleInputEmail1">Nombre y Apellido</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Email</label>
     <input type="password" class="form-control" id="exampleInputPassword1">
   </div>
-  <div class="mb-3 form-check">
+  <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Telefono</label>
     <input type="password" class="form-control" id="exampleInputPassword1">
   </div>
@@ -66,7 +66,7 @@
     <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary">Enviar</button>
+  <button type="submit" class="btn btn-primary btn-violet">Enviar</button>
 </div>
 </form>
 </section>
