--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,6 @@
     <link rel="shortcut icon" href="../favicon/favicon.png.png" type="image/x-icon"> 
     <title>Julietta-beauty - Contactanos</title>
     <meta name="description" content="Estamos para ayudarte con cualquier duda, envianos un mensaje.">
-    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -66,7 +65,7 @@
     <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary btn-violet">Enviar</button>
+  <button type="submit" class="btn btn-violet">Enviar</button>
 </div>
 </form>
 </section>
